--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <style>
     @font-face {
    font-family: baijamjuree;
-   src: url(font/BaiJamJuRee-Regular.ttf);
+   src: url(font/BaiJamjuree-Regular.ttf);
    font-family: baijamjuree-bold;
-   src: url(font/BaiJamJuRee-Bold.ttf);
+   src: url(font/BaiJamjuree-Bold.ttf);
 }
 
 * {
