--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@ overflow-x: hidden;
                 <span style="position: absolute;top:30%;left:0px;width:100%;color:white;text-align: center;pointer-events:none;">Next Question</span>
             </div>
         </div>
-        <div style="position: absolute;bottom:-20vh;left:-20vh;z-index:-1;">
-            <img id="result_markII" src="img/MarkII_FullBody.png" style="width:50vh"/>
+        <div style="position: absolute;bottom:-20vh;left:-20vh;z-index:-1;pointer-events:none;">
+            <img id="result_markII" src="img/MarkII_FullBody.png" style="width:50vh;pointer-events:none;"/>
         </div>
       </div>
 
